--- a/10m29d.md
+++ b/10m29d.md
@@ -2,14 +2,11 @@
 ![기본형1](https://github.com/user-attachments/assets/a5e9676c-0151-4c93-a1ae-abd6f54e9a25)
 
 ## 오늘의 학습 키워드
-키워드 - [문제 보러가기](https://www.acmicpc.net/problem/11561)
+이분탐색 - [문제 보러가기](https://www.acmicpc.net/problem/11561)
   
 <br>
 
 ## 제출한 코드
-
-
-<br>
 
 ### 성공한 코드
 ```
@@ -44,4 +41,9 @@ int main() {
 2. 자세히 읽어보니 최대한 징검다리를 많이 밟아야 했습니다. 그렇다면 무조건 1부터 시작을해서 최대한 늦게 강변 반대편에 도착해야한다고 생각했습니다.
 3. 근데 가만 생각해보니 1부터 1,3,6,10... 어디서 많이 본 수열입니다. 삼각수인걸 깨닫고 삼각수의 공식을 근의공식을 이용해 식을 세웠습니다.
 4. 수학 식을 이용하니 금방 풀었고 시간복잡도도 O(1)로 최고의 코드가 나왔다고 생각합니다. 하지만 알고리즘 분류에 이분 탐색이 있던데 그것을 이용하지 못해 아쉬웠습니다.
+
+<br>
+<br>
+<br>
+<br>
 #99클럽 #코딩테스트준비 #개발자취업 #항해99 #TIL
